tests/samples/positive/traits/trait_dyn_borrowed_dispatch.ax
module trait_dyn_borrowed_dispatch;

trait Source {
    type Item;

    fn read(self: &Self) -> Self.Item;

    fn bonus(self: &Self) -> i32 {
        return 100;
    }
}

trait Accumulate {
    fn add(self: &mut Self, delta: i32) -> i32;
}

struct File {
    value: i32;
}

struct Socket {
    value: i32;
}

struct Counter {
    value: i32;
}

impl Source for File {
    type Item = i32;

    fn read(self: &File) -> i32 {
        return self.value;
    }
}

impl Source for Socket {
    type Item = i32;

    fn read(self: &Socket) -> i32 {
        return self.value + 10;
    }
}

impl Accumulate for Counter {
    fn add(self: &mut Counter, delta: i32) -> i32 {
        self.value = self.value + delta;
        return self.value;
    }
}

fn score(source: &dyn Source<Item = i32>) -> i32 {
    return source.bonus() + source.read();
}

fn apply(accumulator: &mut dyn Accumulate, delta: i32) -> i32 {
    return accumulator.add(delta);
}

fn main() -> i32 {
    let file: File = File { value: 0 };
    let socket: Socket = Socket { value: 5 };
    var counter: Counter = Counter { value: 1 };
    let total: i32 = score(&file) + score(&socket) + apply(&mut counter, 4);
    if total == 220 && counter.value == 5 {
        return 0;
    }
    return 1;
}
