tests/samples/negative/generics/generic_enum_discriminant_overflow.ax
module generic_enum_discriminant_overflow;

enum Choice<T>: u8 {
  big(T) = 300,
}

fn main() -> i32 {
  let value = Choice<i32>.big(1);
  return 0;
}
